# pdm-mypyc

./: README.md  pdm_mypyc.py  pyproject.toml
.github/workflows/: ci.yml
tests/: test_mypyc_hook.py
tests/fixtures/test-project/: README.md  pyproject.toml
tests/fixtures/test-project/foo/: __init__.py  fib.py
